[project]
name = "m9-prompts-comfyui"
description = "Nodes for modifying a prompt to create prompt variations.\nScramblePrompts [m9]: Reorder prompts, remove prompts, modify weights\nTweakWeights [m9]: Modify the weights of prompts matching keywords"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/MarcusNyne/m9-prompts-comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "marcus-nyne"
DisplayName = "m9-prompts-comfyui"
Icon = ""
